--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "ioredis": "^5.8.1",
     "jet-logger": "^2.0.1",
     "jsonwebtoken": "^9.0.2",
+    "module-alias": "^2.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
@@ -62,5 +63,8 @@
     "watch": [
       "src"
     ]
+  },
+  "_moduleAliases": {
+    "@": "build"
   }
 }
