--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
      "module": "commonjs",
      "moduleResolution": "node",
      "outDir": "./build",
+     "rootDir": "./src",
+     "baseUrl": ".",
      "emitDecoratorMetadata": true,
      "experimentalDecorators": true,
      "sourceMap": true,
