Add Paddle integration for subscription management, including webhook handling, checkout session creation, and subscription status checks. Introduce new conversation closing queue and related utilities for improved lead qualification. Update dependencies and refactor existing code for better maintainability.

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@langchain/langgraph": "^0.2.45",
     "@langchain/openai": "^0.6.16",
     "@openrouter/ai-sdk-provider": "^1.2.1",
+    "@paddle/paddle-node-sdk": "^3.4.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/node-cron": "^3.0.11",
     "@types/redis": "^4.0.11",
